confirmation that bug only happens on ios

--- a/shared/alert/Alert.module.scss
+++ b/shared/alert/Alert.module.scss
@@ -20,6 +20,7 @@
   display: grid;
   place-items: center;
   position: relative;
+  z-index: 100;
 
   @media screen and (max-width: 600px) {
     width: 95%;
